Trabalho_de_EngSoftware_Felipe_Abreu_&_Pedro_Costa/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;F:\TRABALHO\trabalho-de-eng-soft-1\Trabalho_de_EngSoftware_Felipe_Abreu_&_Pedro_Costa
-d
F:\TRABALHO\trabalho-de-eng-soft-1\Trabalho_de_EngSoftware_Felipe_Abreu_&_Pedro_Costa\doc
-encoding
UTF-8
-charset
UTF-8
F:\TRABALHO\trabalho-de-eng-soft-1\Trabalho_de_EngSoftware_Felipe_Abreu_&_Pedro_Costa\Comando.java
<---- end of javadoc command ---->
Loading source file F:\TRABALHO\trabalho-de-eng-soft-1\Trabalho_de_EngSoftware_Felipe_Abreu_&_Pedro_Costa\Comando.java...
F:\TRABALHO\trabalho-de-eng-soft-1\Trabalho_de_EngSoftware_Felipe_Abreu_&_Pedro_Costa\Comando.java:1: error: reached end of file while parsing
p
^
1 error
